; ModuleID = '/home/carl/AnghaBench/linux/arch/xtensa/kernel/extr_perf_event.c_xtensa_pmu_setup.c'
source_filename = "/home/carl/AnghaBench/linux/arch/xtensa/kernel/extr_perf_event.c_xtensa_pmu_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XTENSA_PMU_PMG = common dso_local global i32 0, align 4
@XCHAL_NUM_PERF_COUNTERS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @xtensa_pmu_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xtensa_pmu_setup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @XTENSA_PMU_PMG, align 4
  %5 = call i32 @set_er(i32 0, i32 %4)
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %20, %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @XCHAL_NUM_PERF_COUNTERS, align 4
  %9 = icmp ult i32 %7, %8
  br i1 %9, label %10, label %23

10:                                               ; preds = %6
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @XTENSA_PMU_PMCTRL(i32 %11)
  %13 = call i32 @set_er(i32 0, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @XTENSA_PMU_PMSTAT(i32 %14)
  %16 = call i32 @get_er(i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @XTENSA_PMU_PMSTAT(i32 %17)
  %19 = call i32 @set_er(i32 %16, i32 %18)
  br label %20

20:                                               ; preds = %10
  %21 = load i32, i32* %3, align 4
  %22 = add i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %6

23:                                               ; preds = %6
  ret i32 0
}

declare dso_local i32 @set_er(i32, i32) #1

declare dso_local i32 @XTENSA_PMU_PMCTRL(i32) #1

declare dso_local i32 @get_er(i32) #1

declare dso_local i32 @XTENSA_PMU_PMSTAT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
